--- a/AndroidStudioProjects/VincentWang/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/VincentWang/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".advertisement.Ads3Activity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
+        <activity
+            android:name="main.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
 
 
 
